@@ -2,7 +2,7 @@
 # Kernel/System/TemplateGenerator.pm - generate salutations, signatures and responses
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: TemplateGenerator.pm,v 1.13 2009/06/30 11:02:41 martin Exp $
+# $Id: TemplateGenerator.pm,v 1.14 2009/07/06 16:45:44 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -22,7 +22,7 @@ use Kernel::System::Notification;
 use Kernel::System::AutoResponse;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.13 $) [1];
+$VERSION = qw($Revision: 1.14 $) [1];
 
 =head1 NAME
 
@@ -853,7 +853,7 @@ sub _Replace {
     }
 
     # replace other needed stuff
-    $Param{Text} =~ s/OTRS_FIRST_NAME>/$CurrentUser{UserFirstname}/g;
+    $Param{Text} =~ s/<OTRS_FIRST_NAME>/$CurrentUser{UserFirstname}/g;
     $Param{Text} =~ s/<OTRS_LAST_NAME>/$CurrentUser{UserLastname}/g;
 
     # cleanup
@@ -992,6 +992,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.13 $ $Date: 2009/06/30 11:02:41 $
+$Revision: 1.14 $ $Date: 2009/07/06 16:45:44 $
 
 =cut
