@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.916 2009/07/02 23:06:20 martin Exp $
+# $Id: CHANGES,v 1.917 2009/07/06 16:49:09 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta5 (2009/07/??)
+ - (2009/07/06) Fixed bug# 3946 - Incomplete substitution of tag
+    <OTRS_FIRST_NAME> in templates.
  - (2009/07/01) Added Kernel/Language/en_CA.pm and Kernel/Language/en_GB.pm
     to have different date formats for US, CA and GB.
  - (2009/07/01) Fixed bug# 3939 - Not able to configure an external
